# local-ai-rag-lab

./: .env.example  .gitignore  README.md  demo.ps1  demo.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample_docs/: expense-policy.md  leave-policy.md  security-guidelines.md
eval/: questions.json
src/rag_lab/: __init__.py  audit.py  config.py  evaluate.py  ingest.py  retriever.py
tests/: test_audit.py  test_retrieval.py
